--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,14 +11,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme.NoActionBar">
-        <activity android:name=".AdminPanelActivity"></activity>
+        <activity android:name=".QuestionsActivity"
+            android:parentActivityName=".CategoryActivity" ></activity>
+        <activity android:name=".CartActivity" />
+        <activity android:name=".AdminPanelActivity" />
         <activity android:name=".SortProductsActivity" />
         <activity
             android:name=".SignUpActivity"
             android:label="@string/title_activity_sign_up"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".LogInActivity" />
-        <activity android:name=".BuyActivity" />
+        <activity android:name=".BuyActivity"
+            android:parentActivityName=".CategoryActivity"/>
         <activity android:name=".MainActivity" />
         <activity
             android:name=".ProductActivity"
